<resources>
    <string name="app_name">AirMall</string>
    <string name="tab_menu_mine">我的</string>
    <string name="tab_menu_cart">购物车</string>
    <string name="tab_menu_star">收藏</string>
    <string name="tab_menu_category">分类</string>
    <string name="tab_menu_home">首页</string>

    <string name="et_search">搜索内容</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册/登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号不能为空</string>
    <string name="error_invalid_password">密码需大于6位数</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"提供电子邮件填写需要联系人权限。"</string>
    <string name="recommendForYou">为你推荐</string>
    <string name="user_info">用户信息</string>
    <string name="security">账号与安全</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="privacy">隐私</string>
</resources>
